1999-01-27  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (OTHERSRCS): Add init-main.c.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* init-main.c: New file, defining new function diskfs_init_main.
	* diskfs.h: Declare diskfs_init_main.

	* file-set-trans.c: Remove makedev, major, minor macro definitions.
	* dir-lookup.c: Likewise.

1999-01-01  Roland McGrath  <roland@baalperazim.frob.com>

	* sync-interval.c (diskfs_set_sync_interval): Use ENOMEM, not EIEIO.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	Use a struct hurd_port for the cached exec server port,
	so it is properly reference-counted and locked.
	* boot-start.c (diskfs_exec): Variable removed.
	(diskfs_start_bootstrap): Make it a local here.
	Install that port in _diskfs_exec_portcell.
	(diskfs_S_fsys_init): Use _diskfs_exec_portcell instead
	of diskfs_exec.
	* init-init.c (_diskfs_exec_portcell): New variable.
	(diskfs_init_diskfs): Initialize it.
	* priv.h: Declare it.
	* diskfs.h (diskfs_exec, diskfs_exec_ctl): Remove decls.
	* file-exec.c (diskfs_S_file_exec): Use _diskfs_exec_portcell instead
	of diskfs_exec.

	* init-completed.c: File removed (obsolete since 1996).

	* boot-start.c (diskfs_start_bootstrap): Twiddle boot-time messages.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* boot-start.c (_diskfs_boot_privports): Renamed from diskfs_*.

	* priv.h: Declare it.
	* console.c (diskfs_console_stdio): Change caller.

	* file-statfs.c (diskfs_S_file_statfs): Remove __ from struct members.

1998-12-21  Mark Kettenis  <kettenis@phys.uva.nl>

	* file-statfs.c (diskfs_S_file_statfs): Initialize mount options
	in statbuf.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* opts-std-startup.c (startup_options): Move -C above "Boot options:",
	give it a docstring.  Docstrings for --bootflags, --boot-command.
	(_diskfs_boot_command): New variable.
	(startup_options, parse_startup_opt): New option --boot-command,